--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -442,6 +442,8 @@
                     "OCULUS_NOT_RUNNING": "Oculus не запущен",
                     "BS_ALREADY_RUNNING": "Beat Saber уде запущен",
                     "EXE_NOT_FINDED": "Отсутствуют файлы",
+                    "PROTON_NOT_SET": "Proton folder not set",
+                    "PROTON_NOT_FOUND": "Proton binary not found",
                     "EXIT": "Вылет",
                     "OCULUS_LIB_NOT_FOUND": "Библиотека Oculus не найдена"
                 },
@@ -452,7 +454,9 @@
                     "BS_ALREADY_RUNNING": "Закройте Beat Saber, чтобы запустить его.",
                     "EXE_NOT_FINDED": "Некоторые файлы отсутствуют, пробуем их проверить.",
                     "EXIT": "Beat Saber вылетел, пытаемся проверить файлы.",
-                    "OCULUS_LIB_NOT_FOUND": "Проверьте, правильно ли установлено приложение Oculus, и правильно ли определены библиотеки в Oculus."
+                    "OCULUS_LIB_NOT_FOUND": "Проверьте, правильно ли установлено приложение Oculus, и правильно ли определены библиотеки в Oculus.",
+                    "PROTON_NOT_SET": "Set the Proton path in settings",
+                    "PROTON_NOT_FOUND": "Set the Proton path in settings"
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Запустить Steam"
@@ -831,6 +835,12 @@
             "choose-folder": "Изменить папку",
             "default": "По умолчанию",
             "default-tooltip": "По умолчанию в вашей домашней папке"
+        },
+        "linux-setup": {
+            "title": "Linux Setup",
+            "proton-folder": "Proton folder",
+            "proton-folder-description": "Choose the folder to the Proton path. (eg. Proton - Experimental)",
+            "choose-folder": "Изменить папку"
         }
     },
     "maps": {
