--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -16,6 +16,7 @@
         "copy": "Copier",
         "copied": "Copié !",
         "confirm": "Confirmer",
+        "choose-folder": "Choisir un dossier",
         "unknown": "Une erreur inconnue s'est produite ¯\\_(ツ)_/¯"
     },
     "nav-bar": {
@@ -158,13 +159,11 @@
             },
             "installation-folder": {
                 "title": "Dossier d'installation",
-                "description": "Changer le dossier qui contiendra tout le contenu téléchargé par BSManager.",
-                "choose-folder": "Choisir un dossier"
+                "description": "Changer le dossier qui contiendra tout le contenu téléchargé par BSManager."
             },
             "proton-folder": {
                 "title": "Dossier Proton",
                 "description": "Changez le dossier vers le chemin de Proton. (par exemple, Proton - Experimental)",
-                "choose-folder": "Choisir un dossier",
                 "errors": {
                     "title": "Le paramétrage du dossier Proton a échoué",
                     "invalid-folder": "Chemin du dossier Proton invalide"
@@ -834,15 +833,13 @@
         "ask-install-path": {
             "title": "Dossier d'installation",
             "choose-folder-description": "Choisissez le dossier qui contiendra tout le contenu téléchargé par BSManager. (versions, mods, cartes, playlists, etc.)",
-            "choose-folder": "Choisir un dossier",
             "default": "Par défaut",
             "default-tooltip": "Par défaut, dans votre dossier personnel"
         },
         "linux-setup": {
             "title": "Configuration de Linux",
             "proton-folder": "Dossier Proton",
-            "proton-folder-description": "Choisissez le dossier vers le chemin de Proton. (par exemple, Proton - Experimental)",
-            "choose-folder": "Choisir un dossier"
+            "proton-folder-description": "Choisissez le dossier vers le chemin de Proton. (par exemple, Proton - Experimental)"
         }
     },
     "maps": {
