--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -16,6 +16,7 @@
         "copy": "コピー",
         "copied": "コピー済み!",
         "confirm": "確認",
+        "choose-folder": "フォルダーを選択",
         "unknown": "不明なエラーが発生しました (´・ω・`)"
     },
     "nav-bar": {
@@ -158,13 +159,11 @@
             },
             "installation-folder": {
                 "title": "インストールフォルダー",
-                "description": "BSManager によってダウンロードされたすべてのコンテンツを含むフォルダを変更します。",
-                "choose-folder": "フォルダーを選択"
+                "description": "BSManager によってダウンロードされたすべてのコンテンツを含むフォルダを変更します。"
             },
             "proton-folder": {
                 "title": "Protonフォルダー",
                 "description": "フォルダーをProtonのパスに変更してください。（例：Proton - Experimental）",
-                "choose-folder": "フォルダーを選択",
                 "errors": {
                     "title": "Protonフォルダーの設定に失敗しました",
                     "invalid-folder": "無効なProtonフォルダーのパスです"
@@ -833,15 +832,13 @@
         "ask-install-path": {
             "title": "インストールフォルダー",
             "choose-folder-description": "BSManager によってダウンロードされたすべてのコンテンツ (バージョン、MOD、マップ、プレイリストなど) を含むフォルダを選択してください。",
-            "choose-folder": "フォルダーを選択",
             "default": "デフォルト",
             "default-tooltip": "デフォルトでは、ホームフォルダに設定されます"
         },
         "linux-setup": {
             "title": "Linuxセットアップ",
             "proton-folder": "Protonフォルダー",
-            "proton-folder-description": "Protonのパスにフォルダーを選択してください。（例：Proton - Experimental）",
-            "choose-folder": "フォルダーを選択"
+            "proton-folder-description": "Protonのパスにフォルダーを選択してください。（例：Proton - Experimental）"
         }
     },
     "maps": {
