--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -16,6 +16,7 @@
         "copy": "Скопировать",
         "copied": "Скопировано!",
         "confirm": "Подтвердить",
+        "choose-folder": "Изменить папку",
         "unknown": "Неизвестная ошибка ¯\\_(ツ)_/¯"
     },
     "nav-bar": {
@@ -158,13 +159,11 @@
             },
             "installation-folder": {
                 "title": "Папка установок",
-                "description": "Изменить папку, которая будет содержать весь контент, загруженный BSManager.",
-                "choose-folder": "Изменить папку"
+                "description": "Изменить папку, которая будет содержать весь контент, загруженный BSManager."
             },
             "proton-folder": {
                 "title": "Папка Proton",
                 "description": "Измените папку на путь к Proton. (например, Proton - Experimental)",
-                "choose-folder": "Изменить папку",
                 "errors": {
                     "title": "Не удалось установить папку Proton",
                     "invalid-folder": "Недействительный путь к папке Proton"
@@ -832,15 +831,13 @@
         "ask-install-path": {
             "title": "Папка установок",
             "choose-folder-description": "Выберите папку, которая будет содержать весь контент, загруженный BSManager. (версии, моды, карты, плейлисты и т.д.)",
-            "choose-folder": "Изменить папку",
             "default": "По умолчанию",
             "default-tooltip": "По умолчанию в вашей домашней папке"
         },
         "linux-setup": {
             "title": "Настройка Linux",
             "proton-folder": "Папка Proton",
-            "proton-folder-description": "Выберите папку для пути к Proton. (например, Proton - Experimental)",
-            "choose-folder": "Изменить папку"
+            "proton-folder-description": "Выберите папку для пути к Proton. (например, Proton - Experimental)"
         }
     },
     "maps": {
