--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -16,6 +16,7 @@
         "copy": "複製",
         "copied": "已複製!",
         "confirm": "確認",
+        "choose-folder": "選擇文件夾",
         "unknown": "發生了一個錯誤 ¯\\_(ツ)_/¯"
     },
     "nav-bar": {
@@ -158,13 +159,11 @@
             },
             "installation-folder": {
                 "title": "安裝文件夾",
-                "description": "更改將包含 BSManager 下載的所有內容的文件夾。",
-                "choose-folder": "選擇文件夾"
+                "description": "更改將包含 BSManager 下載的所有內容的文件夾。"
             },
             "proton-folder": {
                 "title": "Proton資料夾",
                 "description": "將資料夾更改為Proton路徑。（例如：Proton - Experimental）",
-                "choose-folder": "選擇文件夾",
                 "errors": {
                     "title": "設置Proton資料夾失敗",
                     "invalid-folder": "無效的Proton資料夾路徑"
@@ -833,15 +832,13 @@
         "ask-install-path": {
             "title": "安裝文件夾",
             "choose-folder-description": "選擇將包含 BSManager 下載的所有內容的文件夾。(版本、mod、地圖、播放列表等)",
-            "choose-folder": "選擇文件夾",
             "default": "預設",
             "default-tooltip": "預設為您的主資料夾"
         },
         "linux-setup": {
             "title": "Linux設置",
             "proton-folder": "Proton資料夾",
-            "proton-folder-description": "選擇資料夾作為Proton路徑。（例如：Proton - Experimental）",
-            "choose-folder": "選擇文件夾"
+            "proton-folder-description": "選擇資料夾作為Proton路徑。（例如：Proton - Experimental）"
         }
     },
     "maps": {
